Fix header z-index to work with bootstrap modals

--- a/public/assets/css/default.less
+++ b/public/assets/css/default.less
@@ -119,7 +119,7 @@ header {
   height: 44px;
   position: fixed;
   top: 0;
-  z-index: 2000;
+  z-index: 1020;
   .drop-shadow(0, 2px, 7px, 0.5);
 }
 
